--- a/css/style.css
+++ b/css/style.css
@@ -68,21 +68,126 @@
     clear: both;
 }
 
-.column-1{
-    float: right;
-    width: 31%;
-    position: relative;
-    padding: 10px;
-    bottom: 450px;
-    top: 20px;
+.intro{
     background-color: lightgray;
-    margin-right: 5px;
+    width: 97.5%;
+    height: 650px;
+    position: absolute;
+    /*padding-left: 15px;*/
 }
-.column-1 img{
-    border-radius: 5px;
+
+.block-1 {
+    background: lightgray;
+    border-left: 10px solid orange;
+    margin: 1.5em 10px;
+    padding: 0.1em 20px;
 }
 .card{
     background-color: white;
+    width: 450px;
     height: 200px;
+    left: 11px;
+    position: relative;
+    float: left;
+    margin-left: 120px;
+}
+.card-left{
+    top: 40px;
+    position: relative;
+    left: 20px;
+    float: left;
+
+}
+.card-title{
+    float: right;
+    top: 40px;
+    position: relative;
+    right: 200px;
+}
+.card-desi{
+    position: relative;
+    right: 500px;
+    float: left;
+    top: 38px;
+    left: 92px;
+}
+.date{
+    position: absolute;
+    float: left;
+    top: 80px;
+    left: 144px;
 }
 
+.date-1{
+    position: absolute;
+    float: left;
+    top: 110px;
+    left: 144px;
+}
+.card-1{
+    background-color: white;
+    width: 450px;
+    height: 200px;
+    left: 11px;
+    position: relative; 
+    float: right;
+    margin-right: 200px;
+}
+.block-1{
+    position: relative;
+    
+}
+
+.card-1b{
+    background-color: white;
+    width: 450px;
+    height: 200px;
+    left: 11px;
+    position: relative; 
+    float: right;
+    margin-right: 200px;
+    margin-top: 10px;
+}
+.card-2b{
+    background-color: white;
+    width: 450px;
+    height: 200px;
+    left: 114px;
+    position: relative; 
+    float: right;
+    margin-right: 200px;
+    margin-top: 10px;
+}
+
+.quote-f{
+    margin-top: 150px;
+    position: relative;
+    margin: 1.5em 1px;
+    padding: 0.1em 20px;
+    border-left: 10px solid orange;
+    height:40px;
+    top: 500px;
+    float: left;
+}
+.block-f{
+    margin-bottom: 100px;
+    position: absolute;
+}
+
+.block-f-r{
+    margin-bottom: 100px;
+    position: absolute;
+}
+.quote-f-r{
+    
+    position: relative;
+    margin: 1.5em 1px;
+    padding: 0.1em 20px;
+    border-left: 10px solid orange;
+    height:40px;
+    margin-bottom:  -100px;
+    left: 500px;
+}
+.footer-right{
+
+}
